# mmg_toolbox

./: README.md  catalog-info.yaml  deploy_zocalo_processors.py  environment.yml  make_edge_database.py  mkdocs.yml  pyproject.toml  start_dataviewer.py  test_nbrunner.py  test_script.py  test_spectra.py
.github/workflows/: make_docs.yml  (+2 more)
docs/: index.md  make_docs.py  requirements.txt  run_local_docs.py
examples/: diffcalc_example.py  diffcalc_example_mmg_toolbox.py  example_experiment.py  example_i16_xmcd.py  example_lattice.py  example_metadata.py  example_msmapper.py  example_multipeakfit.py  example_nexus_scan.py  example_nxtransformations.py  example_peak_fits.py  example_xas.py  example_xas_edge_detection.py  example_xas_hdfmap.py  example_xmcd.py  ideal_nexus_file.py  launch_jupyter.py  make_edge_database.py  mmg_beamlines_metadata.py  msmapper_3dplot_pyvista.py  msmapper_check_hkl.py  msmapper_correct_ubmatrix.py  powder_reduction_demo.ipynb  read_nexus_file_with_h5py.py
mmg_toolbox/: __init__.py  dat_file_reader.py  data_scan.py  diffcalc.py  env_functions.py  file_functions.py  file_reader.py  fitting.py  i06_functions.py  misc_functions.py  nb_runner.py  nexus_functions.py  nexus_object.py  nexus_reader.py  nexus_transformations.py  nexus_writer.py  nxxas_loader.py  nxxas_writer.py  polarisation.py  spectra.py  spectra_analysis.py  spectra_container.py  spectra_scan.py  spectra_scan_old.py  xray_utils.py
notebooks/: README.md  deploy_zocalo_processors.py  detector_calibration_processor.ipynb  i21_Image_Processing.ipynb  marimo_dataviewer.py  msmapper_processor.ipynb  msmapper_processor_pyvista.ipynb  nexus2srs_processor.ipynb  nexus_processor.ipynb  powder_reduction_demo.ipynb  xas_notebook.ipynb  xmcd_processor.ipynb
old/: Py06functions_Nexus.py  Py16progs.py
pymmg/: i06_functions.py
tests/: __init__.py  example_files.py  show_plots.py  test_config.py  test_data_readers.py  test_dataviewer.py  test_env_functions.py  test_experiment.py  test_experiment_startup.py  test_fitting.py  test_imports.py  test_metadata.py  test_misc.py  test_nexus_reader.py  test_notebooks.py  test_nxfind.py  test_plotting.py  test_polarisation.py  test_spectra.py  test_spectra_analysis.py  test_utils.py
(+183 files in other folders)
