[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  'mmg_toolbox', 'mmg_toolbox.beamline_metadata', 'mmg_toolbox.data', 'mmg_toolbox.scripts',
  'mmg_toolbox.tkguis', 'mmg_toolbox.tkguis.misc', 'mmg_toolbox.tkguis.widgets'
]

[tool.setuptools.package-data]
mmg_toolbox = ["*.json"]

[project]
name = "mmg_toolbox"
dynamic = ['version']
dependencies = [
  "numpy",
  "h5py",
  "hdf5plugin",
  "hdfmap",
  "matplotlib",
  "imageio",
  "scipy",
  "lmfit"
]
requires-python = ">=3.10"
authors = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
maintainers = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
description = "Repository for useful python data analysis functions for the Diamond Magnetic Materials Group"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  'nexus',
]
classifiers = [
  'Programming Language :: Python :: 3.10',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering :: Physics',
  'License :: OSI Approved :: Apache Software License',
  'Development Status :: 3 - Alpha',
]

[tool.setuptools.dynamic]
version = {attr = "mmg_toolbox.__version__"}